2007-06-20  Thomas H.P. Andersen  <phomes@gmail.com>

	* gnome-sudoku.desktop.in.in: Change comment to:
	"Test your logic skills in this number grid puzzle" (bug #409413)

2007-06-18  Thomas H.P. Andersen  <phomes@gmail.com>

	* src/lib/gsudoku.py: Set number popup transient for the
	main window. (bug #406767)

2007-06-17  Thomas H.P. Andersen  <phomes@gmail.com>

	* src/lib/gnome_sudoku.py: Store highlight setting in gconf (bug #445590)

2007-06-13  Thomas H.P. Andersen  <phomes@gmail.com>

	* src/lib/gsudoku.py: Don't allow grey fields to be changed by mouse
	(bug #422666). 

2007-06-05  Andreas Røsdal  <andreasr@gnome.org>

	* gnome_sudoku.py: Remove the option for selecting black background
	option (bug #395135). 

2007-06-05  Andreas Røsdal  <andreasr@gnome.org>

	* gnome_sudoku.py: Rearrage meny items to be more logically organized. 

2007-06-05  Andreas Røsdal  <andreasr@gnome.org>

	* gnome_sudoku.py: Disable saving and loading, because of all the 
	crashes reported to these features.

2007-06-05  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gnome_sudoku.py:
	* src/lib/printing.py: Ensure that g_thread_init is called
	before all other GLib functions. This will prevent memory 
	corruption, crashes, leaks and/or unexpected aborts.

	Reported by Tom London:
	https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=241917

2007-05-20  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gnome_sudoku.py: Set default icon for all windows (Bug #393250)
	* src/lib/defaults.py.in: Catch exceptions making data directory

2007-05-15  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gnome_sudoku.py: 
	* help/C/gnome-sudoku.xml: Make the main menu consistent
	with the rest of gnome-games.Rename  "Game" -> "Tools" 
	and  "File" -> "Game" Patch from Thomas Andersen in Bug #408440.

2007-05-15  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gnome_sudoku.py: Use Ctrl-H for hint. Patch from
	Thomas Andersen in Bug #420325.

2007-05-04  Andreas Røsdal  <andreasr@gnome.org>
