@@ -1,15 +1,15 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Sudoku
 _Comment=Test your logic skills in this number grid puzzle
-Version=1.0
-Encoding=UTF-8
 Exec=gnome-sudoku
+Icon=gnome-sudoku
 Terminal=false
 Type=Application
-Categories=GNOME;Game;LogicGame;
-StartupNotify=true
-Icon=gnome-sudoku
+Categories=GNOME;GTK;Game;LogicGame;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-games
-X-GNOME-Bugzilla-Version=@VERSION@
 X-GNOME-Bugzilla-Component=gnome-sudoku
+X-GNOME-Bugzilla-Version=@VERSION@
+StartupNotify=true
+Version=1.0
