@@ -1,3 +1,8 @@
+2007-06-22  Thomas H.P. Andersen  <phomes@gmail.com>
+
+	* gnome-sudoku.desktop.in.in: Add GTK to categories and reorder the
+	lines to go in the same order as the other games. (bug #449619)
+
 2007-06-20  Thomas H.P. Andersen  <phomes@gmail.com>
 
 	* gnome-sudoku.desktop.in.in: Change comment to:
